# The complex upload command:
# rm -rf dist && python -m build --sdist && twine check dist/* && twine upload -s dist/*

[metadata]
name = pssh
version = attr: psshlib.version.VERSION
author = Andrew McNabb
author_email = amcnabb@mcnabbs.org
description = Parallel version of OpenSSH and related tools
license = BSD
url = https://github.com/lilydjwg/pssh
long_description = PSSH (Parallel SSH) provides parallel versions of OpenSSH and related tools, including pssh, pscp, prsync, pnuke, and pslurp.  The project includes psshlib which can be used within custom applications.
long_description_content_type = text/plain
platforms = linux

classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: System Administrators
  License :: OSI Approved :: BSD License
  Operating System :: POSIX
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: System :: Clustering
  Topic :: System :: Networking
  Topic :: System :: Systems Administration

[options]
zip_safe = True

packages = psshlib
install_requires =
  setuptools; python_version<"3.8"
scripts =
  bin/pssh
  bin/pnuke
  bin/prsync
  bin/pslurp
  bin/pscp
  bin/pssh-askpass

